--- a/src/chestList/chestList.css
+++ b/src/chestList/chestList.css
@@ -3,8 +3,10 @@
 .chest-list {
     border: 2px solid red;
     width: 100%;
-    
+    cursor: pointer;
+    opacity: 1;
 }
+
 
 .chest-list-boxes {
     margin: 10px;
@@ -18,12 +20,15 @@
 
 .chest-list-boxes-selected {
     margin: 10px;
-    border: 4px solid rgb(184, 21, 61);
+    border: 2px solid rgb(184, 21, 61);
     width: 150px;
     display: inline-block;
     text-align: center;
     font-size: 12px;   
-    font-weight: bold;    
+    font-weight: bold;
+    opacity: 0.8;    
+
+    
 }
 
 
