--- a/src/chestList/chestList.css
+++ b/src/chestList/chestList.css
@@ -26,7 +26,10 @@
     text-align: center;
     font-size: 12px;   
     font-weight: bold;
-    opacity: 0.8;    
+    opacity: 0.8;
+    -webkit-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    transform: scale(1.1); 
 
     
 }
@@ -45,6 +48,9 @@
     border: 2px solid rgb(42, 69, 190);
     width: 30px;
     height: 30px;
+    -webkit-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    transform: scale(1.1); 
   
 }
 
