--- a/src/chestOpen/styleChest.css
+++ b/src/chestOpen/styleChest.css
@@ -18,8 +18,11 @@
     background-color: #4e4444;
     display: flex;
     justify-content: center;
-    height: 1000px;
+    height: 1020px;
     margin-top: 50px;
+    -webkit-box-shadow: 24px 32px 56px 27px rgba(151, 163, 169, 0.2);
+    -moz-box-shadow: 24px 32px 56px 27px rgba(151, 163, 169, 0.2);
+    box-shadow: 24px 32px 46px 27px rgba(151, 163, 169, 0.2);
 
   }
   
@@ -46,7 +49,7 @@
     text-align: center;
     width: 450px;
     margin: 10px;
-    height: 500px;
+    /* height: 500px; */
     
   }
 
@@ -65,7 +68,7 @@
   .reward-list-rare {
     border: 2px solid rgb(124, 119, 114);
     list-style-type: none;
-    height: 80%;
+    height: 70%;
     width: 450px;
     margin: 0px auto 15px;
     background-image: url("../../public/img/raredrop.png");
@@ -75,7 +78,7 @@
   .reward-list-rare-black {
     border: 2px solid rgb(124, 119, 114);
     list-style-type: none;
-    height: 100%;
+    /* height: 80%; */
     width: 450px;
     margin: 0px auto 15px;
     background-size: 500px 300px;
@@ -291,7 +294,16 @@
     background-image: url("../../public/img/remove.png");
     background-size: cover;
     cursor: pointer;
+    opacity: 1;
     
+  }
+
+  .butRemove:hover {
+    opacity: 0.9;
+    transition: 0.5s ease-in-out;
+    transform: translate(0, -5%) rotate(2deg);
+    box-shadow: 0px 0px 10px rgb(194, 169, 169);
+ 
   }
 
   .buttons {
@@ -300,10 +312,13 @@
     text-align: center;
     align-items: center;
     display: flex;
+   
+    
   }
 
   .inpBut:active {
     opacity: 1;
+   
     border: 1px solid rgb(7, 255, 40);
   }
 
@@ -315,4 +330,7 @@
     cursor: pointer
   }
 
+  .inpArea {
+    margin: 5px;
+  }
  
