--- a/src/chestOpen/styleChest.css
+++ b/src/chestOpen/styleChest.css
@@ -1,7 +1,7 @@
 .page-container {
     display: flex;
     justify-content: center;
-    width: 80%;
+    width: 88.5%;
   }
 
   .kostil {
@@ -108,7 +108,7 @@
   .page-container p {
     color: white;
     line-height: 25px; 
-    font-size: 13px;
+    font-size: 12px;
    
     background-color: rgb(71, 68, 68);
     
@@ -161,7 +161,7 @@
     align-items: center;
     border: 2px solid rgb(124, 119, 114);
     overflow-y: scroll;
-    height: 300px;
+    height: 330px;
     width: 425px;
     margin: 10px;
   }
@@ -277,7 +277,7 @@
   }
 
   body{ 
-    zoom: 80%
+    zoom: 90%
   }
 
   span {
@@ -295,6 +295,9 @@
     background-size: cover;
     cursor: pointer;
     opacity: 1;
+    transition: 0.5s ease-in-out;
+    
+    box-shadow: 0px 0px 0px rgb(194, 169, 169);
     
   }
 
@@ -303,8 +306,9 @@
     transition: 0.5s ease-in-out;
     transform: translate(0, -5%) rotate(2deg);
     box-shadow: 0px 0px 10px rgb(194, 169, 169);
- 
   }
+
+  
 
   .buttons {
     width: 400px;
