--- a/src/chestList/chestList.css
+++ b/src/chestList/chestList.css
@@ -1,3 +1,40 @@
+@media screen and (max-width: 768px) {
+    .chest-list {
+      display: flex;
+      flex-wrap: nowrap;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      /* margin: 20px auto; */
+    }
+  
+    .chest-list-boxes, .chest-list-boxes-selected {
+      width: 80px;
+      height: 80px;
+      margin: 10px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      cursor: pointer;
+    }
+  
+    .chest-list-boxes-selected {
+      border: 2px solid #ffcc00;
+    }
+  
+    .selectedBox {
+      width: 50px;
+      height: 50px;
+    }
+  
+    p {
+      font-size: 10px;
+      margin: 5px 0;
+    }
+  }
+
+
 
 
 .chest-list {
@@ -7,6 +44,7 @@
     opacity: 1;
     display: flex;
     justify-content: center;
+    margin: 0px 0px 50px 0px;
 }
 
 
@@ -55,5 +93,3 @@
     transform: scale(1.1); 
   
 }
-
- 
