--- a/src/chestOpen/styleChest.css
+++ b/src/chestOpen/styleChest.css
@@ -59,7 +59,7 @@
   .headChest {
     border: 1px solid rgb(211, 171, 63);
     text-align: center;
-    width: 450px;
+    width: 400px;
     margin: 10px;
     /* height: 500px; */
     
@@ -71,7 +71,7 @@
     border: 2px solid rgb(124, 119, 114);
     list-style-type: none;
     height: 90%;
-    width: 450px;
+    width: 400px;
     margin: 0px auto 10px;
     background-image: url("../../public/img/commondropfullblack.png");
     background-size: 500px 100px;
@@ -81,7 +81,7 @@
     border: 2px solid rgb(124, 119, 114);
     list-style-type: none;
     height: 70%;
-    width: 450px;
+    width: 400px;
     margin: 0px auto 15px;
     background-image: url("../../public/img/raredrop.png");
     background-size: 500px 300px;
@@ -91,7 +91,7 @@
     border: 2px solid rgb(124, 119, 114);
     list-style-type: none;
     /* height: 80%; */
-    width: 450px;
+    width: 400px;
     margin: 0px auto 15px;
     background-size: 500px 300px;
     background-image: url("../../public/img/commondropfullblack.png");
@@ -120,7 +120,7 @@
   .page-container p {
     color: white;
     line-height: 25px; 
-    font-size: 12px;
+    font-size: 10px;
    
     background-color: rgb(71, 68, 68);
     
@@ -151,7 +151,7 @@
     border: 2px solid rgb(124, 119, 114);
     overflow-y: scroll;
     height: 280px;
-    width: 425px;
+   /*  width: 425px; */
     margin: 10px;
   }
 
@@ -174,7 +174,7 @@
     border: 2px solid rgb(124, 119, 114);
     overflow-y: scroll;
     height: 330px;
-    width: 425px;
+    /* width: 425px; */
     margin: 10px;
   }
 
@@ -216,7 +216,7 @@
     align-items: center;
     font-size: 13px;
     height: fit-content;
-    width: 450px;
+    width: 414px;
   }
 
 
@@ -278,7 +278,7 @@
     color: rgb(255, 255, 255);
     background-color: transparent;
     font-size: 12px;
-    line-height: 0px;
+    line-height: 0.5em;
  
   }
 
@@ -322,7 +322,7 @@
   
 
   .buttons {
-    width: 400px;
+    /* width: 400px; */
     justify-content: center;
     text-align: center;
     align-items: center;
@@ -383,7 +383,7 @@
 
   .container {
     border: 1px solid rgb(209, 105, 7);
-    width: 450px;
+    /* width: 100%; */
     flex-direction: column;
     align-items: center;
     background-color: #4e4444;
@@ -431,7 +431,7 @@
     border: 2px solid rgb(124, 119, 114);
     list-style-type: none;
     height: 90%;
-    width: 440px;
+    width: 390px;
     margin: 0px auto 10px;
     background-image: url("../../public/img/commondropfullblack.png");
     background-size: 500px 100px;
@@ -441,7 +441,7 @@
     border: 2px solid rgb(124, 119, 114);
     list-style-type: none;
     height: 60%;
-    width: 440px;
+    width: 390px;
     margin: 0px auto 15px;
     background-image: url("../../public/img/raredrop.png");
     background-size: 500px 300px;
@@ -451,7 +451,7 @@
     border: 2px solid rgb(124, 119, 114);
     list-style-type: none;
     /* height: 80%; */
-    width: 440px;
+    width: 390px;
     margin: 0px auto 15px;
     background-size: 500px 300px;
     background-image: url("../../public/img/commondropfullblack.png");
@@ -480,7 +480,7 @@
   .page-container p {
     color: white;
     line-height: 25px; 
-    font-size: 12px;
+    font-size: 10px;
    
     background-color: rgb(71, 68, 68);
     
@@ -511,7 +511,7 @@
     border: 2px solid rgb(124, 119, 114);
     overflow-y: scroll;
     height: 280px;
-    width: 425px;
+   /*  width: 425px; */
     margin: 10px;
   }
 
@@ -534,7 +534,7 @@
     border: 2px solid rgb(124, 119, 114);
     overflow-y: scroll;
     height: 330px;
-    width: 425px;
+    /* width: 425px; */
     margin: 10px;
   }
 
@@ -561,7 +561,7 @@
 
   .boxListInfo {
      /* margin: 50px; */
-     width: 450px;
+    /*  width: 400px; */
      height: fit-content;
      display: flex;   
      font-family:Verdana, Geneva, Tahoma, sans-serif;
@@ -576,7 +576,7 @@
     align-items: center;
     font-size: 11px;
     height: fit-content;
-    width: 450px; 
+    width: 414px; 
   }
 
 
@@ -595,7 +595,7 @@
     flex-direction: column; /* Устанавливаем столбцовое направление для выравнивания h4 */
     align-items: center; /* Выравнивание по центру по горизонтали */
     background-color:rgb(206, 139, 39);
-    width: 450px;
+    width: 400px;
  }
 
    .backpackList h4 {
@@ -608,8 +608,8 @@
  .inbackpackList {
   border: 2px solid rgb(155, 98, 61);
   background-color: rgb(26, 35, 43);
-  width: 450px;
-  height: 450px;
+  width: 400px;
+  height: 400px;
   display: flex;
   flex-wrap: wrap;
   align-content: flex-start;
@@ -638,7 +638,7 @@
     color: rgb(255, 255, 255);
     background-color: transparent;
     font-size: 12px;
-    line-height: 0px;
+    line-height: 0.5em;
  
   }
 
@@ -684,7 +684,7 @@
   
 
   .buttons {
-    width: 400px;
+    /* width: 400px; */
     justify-content: center;
     text-align: center;
     align-items: center;
