--- a/src/chestOpen/styleChest.css
+++ b/src/chestOpen/styleChest.css
@@ -1,361 +1,5 @@
 
 
-@media screen and (max-width: 1024px) {
-
-  body{ 
-    zoom: 100%
-  }
-  
-  .page-container {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    flex-direction: column-reverse;
-    align-content: stretch;
-    align-items: flex-start;
-  }
-
-  .kostil {
-    display: flex;
-    justify-content: center;
-    width: 100%; 
-  }
-
-  .container {
-    border: 1px solid rgb(209, 105, 7);
-   /*  width: 100%; */
-    flex-direction: column;
-    align-items: center;
-    background-color: #4e4444;
-    display: flex;
-    justify-content: center;
-    height: 1020px;
-    /* margin-top: 50px; */
-    -webkit-box-shadow: 24px 32px 56px 27px rgba(151, 163, 169, 0.2);
-    -moz-box-shadow: 24px 32px 56px 27px rgba(151, 163, 169, 0.2);
-    box-shadow: 24px 32px 46px 27px rgba(151, 163, 169, 0.2);
-    order: 1;
-    margin-right: 0;
-    margin: 10px auto;
-
-  }
-  
-  .button-container {
-    margin: 10px;
-    height: 40px;
-    width: 200px;
-    cursor: pointer;
-    opacity: 1;
-  }
-
-  .button-container:hover {
-    opacity: 0.9;
-  }
-  
-  .button {
-    margin: 10px;
-    height: 30px;
-    width: 200px;
-  }
-
-  .headChest {
-    border: 1px solid rgb(211, 171, 63);
-    text-align: center;
-    width: 400px;
-    margin: 10px;
-    /* height: 500px; */
-    
-  }
-
-  
-  
-  .reward-list-common {
-    border: 2px solid rgb(124, 119, 114);
-    list-style-type: none;
-    height: 90%;
-    width: 400px;
-    margin: 0px auto 10px;
-    background-image: url("../../public/img/commondropfullblack.png");
-    background-size: 500px 100px;
-  }
-
-  .reward-list-rare {
-    border: 2px solid rgb(124, 119, 114);
-    list-style-type: none;
-    height: 70%;
-    width: 400px;
-    margin: 0px auto 15px;
-    background-image: url("../../public/img/raredrop.png");
-    background-size: 500px 300px;
-  }
-
-  .reward-list-rare-black {
-    border: 2px solid rgb(124, 119, 114);
-    list-style-type: none;
-    /* height: 80%; */
-    width: 400px;
-    margin: 0px auto 15px;
-    background-size: 500px 300px;
-    background-image: url("../../public/img/commondropfullblack.png");
-    
-  }
-  
- 
-  .text-light {
-    color: #fff;
-    font-family:Arial, sans-serif
-    
-    
-    
-  }
-
- 
-
-  h3 {
-    text-align: center;
-    color: white;
-    margin: 0px 0px 20px 00px;
-    
-   
-  }
-
-  .page-container p {
-    color: white;
-    line-height: 25px; 
-    font-size: 10px;
-   
-    background-color: rgb(71, 68, 68);
-    
-  } 
-
-  .page-container img {
-    margin: 2px;
-    width: 48px;
-    height: 46px;
-    margin-right: 7px;
-  }
-
-  .ifNoImg {
-    margin: 2px;
-    width: 48px;
-    height: 46px;
-    margin-right: 7px;
-  }
-
-  .page-container input {
-    margin: 10px;
-  }
-
-  
-  
-  .rare {
-    align-items: center;
-    border: 2px solid rgb(124, 119, 114);
-    overflow-y: scroll;
-    height: 280px;
-   /*  width: 425px; */
-    margin: 10px;
-  }
-
-  .rare::-webkit-scrollbar {
-    width: 16px;
-}
-
-  .rare::-webkit-scrollbar-track {
-    background-color: #e4e4e4;
-    border-radius: 100px;
-}
-
-  .rare::-webkit-scrollbar-thumb {
-    background-color: #cf9e58;
-    border-radius: 100px;
-}
-
-  .common {
-    align-items: center;
-    border: 2px solid rgb(124, 119, 114);
-    overflow-y: scroll;
-    height: 330px;
-    /* width: 425px; */
-    margin: 10px;
-  }
-
-
-  .common::-webkit-scrollbar {
-    width: 16px;
-}
-
-  .common::-webkit-scrollbar-track {
-    background-color: #e4e4e4;
-    border-radius: 100px;
-}
-
-  .common::-webkit-scrollbar-thumb {
-    background-color: #d4aa70;
-    border-radius: 100px;
-}
-
-  .boxListInfo h4 {
-    text-align: center;
-    font-size: 16px;
-    
-   }
-
-  .boxListInfo {
-    margin: 10px auto;
-     height: fit-content;
-     display: flex;   
-     font-family: Verdana, Geneva, Tahoma, sans-serif; 
- }
-    
-
-  .inBoxListInfo {
-    border: 2px solid rgb(155, 98, 61);
-    background-color: aliceblue;
-    justify-content: center;
-    align-items: center;
-    font-size: 13px;
-    height: fit-content;
-    /* width: 400px; */
-   
-  }
-
-  .backpackList {
-    margin: 10px auto;
-    border: 1px solid blue;
-    height: 1%;
-    display: flex;
-    flex-direction: column; /* Устанавливаем столбцовое направление для выравнивания h4 */
-    align-items: center; /* Выравнивание по центру по горизонтали */
-    background-color:rgb(206, 139, 39);
-    /* width: 450px; */
- }
-
-   .inbackpackList {
-    border: 2px solid rgb(155, 98, 61);
-    background-color: rgb(26, 35, 43);
-    height: 600px;
-    display: flex;
-    flex-wrap: wrap;
-    align-content: flex-start;
-  }
-
-
-  li {
-    list-style-type: none;
-    margin: 2px;
-    font-size: 11px;
-    
-  }
-
-  .backpackList h4 {
-    text-align: center;
-    width: 50%;
-    height: 1%;
-   }
-
-  
-
-.wrapperBackPack {
-  position: relative;
-  width: 50px; /* Фиксированная ширина элемента */  
-  height: 50px;
- 
-}
-
-  .wrapperBackPack img {
-    margin: auto;
-    position: relative;
-    width: 100%;
-    height: 95%;
-    display: inline-block;
-    border: 1px solid rgb(255, 255, 255);
-  }
-
-  
-  
-  
-  .wrapperBackPack p {
-    color: rgb(255, 255, 255);
-    background-color: transparent;
-    font-size: 12px;
-    line-height: 0.5em;
- 
-  }
-
-  .counter {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    font-weight: bold; 
-  }
-
- 
-
-  span {
-    text-align: center;
-    height: 1%;
-    color: rgb(253, 50, 50);
-    font-weight: bold;
-  }
-
-
-  .butRemove {
-    height: 40px;
-    width: 40px;
-    background-image: url("../../public/img/remove.png");
-    background-size: cover;
-    cursor: pointer;
-    opacity: 1;
-    transition: 0.5s ease-in-out;
-    
-    box-shadow: 0px 0px 0px rgb(194, 169, 169);
-    
-  }
-
-  .butRemove:hover {
-    opacity: 0.9;
-    transition: 0.5s ease-in-out;
-    transform: translate(0, -5%) rotate(2deg);
-    box-shadow: 0px 0px 10px rgb(194, 169, 169);
-  }
-
-  
-
-  .buttons {
-    /* width: 400px; */
-    justify-content: center;
-    text-align: center;
-    align-items: center;
-    display: flex;
-   
-    
-  }
-
-  .inpBut {
-    opacity: 1;
-    margin: 2px;
-  }
-
-
-  .inpBut:active {
-    opacity: 1;
- 
-  }
-
-  .inpBut:hover {
-    opacity: 0.7;
-    -webkit-transform: scale(1.2);
-    -ms-transform: scale(1.2);
-    transform: scale(1.1);
-    cursor: pointer
-  }
-
-  .inpArea {
-    margin: 5px;
-  }
-}
-
 
 
 
@@ -711,3 +355,369 @@
     color: rgba(12, 3, 0, 0.938);
     font-size: 8px;
   }
+
+
+@media screen and (min-width: 375px) {
+
+    body{ 
+      zoom: 100%
+    }
+    
+    .page-container {
+      display: flex;
+      justify-content: space-between;
+      width: 100%;
+      flex-direction: column-reverse;
+      align-content: stretch;
+      align-items: flex-start;
+    }
+  
+    .kostil {
+      display: flex;
+      justify-content: center;
+      width: 100%; 
+    }
+  
+    .container {
+      border: 1px solid rgb(209, 105, 7);
+     /*  width: 100%; */
+      flex-direction: column;
+      align-items: center;
+      background-color: #4e4444;
+      display: flex;
+      justify-content: center;
+      height: 1020px;
+      /* margin-top: 50px; */
+      -webkit-box-shadow: 24px 32px 56px 27px rgba(151, 163, 169, 0.2);
+      -moz-box-shadow: 24px 32px 56px 27px rgba(151, 163, 169, 0.2);
+      box-shadow: 24px 32px 46px 27px rgba(151, 163, 169, 0.2);
+      order: 1;
+      margin-right: 0;
+      margin: 10px auto;
+  
+    }
+    
+    .button-container {
+      margin: 10px;
+      height: 40px;
+      width: 200px;
+      cursor: pointer;
+      opacity: 1;
+    }
+  
+    .button-container:hover {
+      opacity: 0.9;
+    }
+    
+    .button {
+      margin: 10px;
+      height: 30px;
+      width: 200px;
+    }
+  
+    .headChest {
+      border: 1px solid rgb(211, 171, 63);
+      text-align: center;
+      width: 400px;
+      margin: 10px;
+      /* height: 500px; */
+      
+    }
+  
+    
+    
+    .reward-list-common {
+      border: 2px solid rgb(124, 119, 114);
+      list-style-type: none;
+      height: 90%;
+      width: 400px;
+      margin: 0px auto 10px;
+      background-image: url("../../public/img/commondropfullblack.png");
+      background-size: 500px 100px;
+    }
+  
+    .reward-list-rare {
+      border: 2px solid rgb(124, 119, 114);
+      list-style-type: none;
+      height: 70%;
+      width: 400px;
+      margin: 0px auto 15px;
+      background-image: url("../../public/img/raredrop.png");
+      background-size: 500px 300px;
+    }
+  
+    .reward-list-rare-black {
+      border: 2px solid rgb(124, 119, 114);
+      list-style-type: none;
+      /* height: 80%; */
+      width: 400px;
+      margin: 0px auto 15px;
+      background-size: 500px 300px;
+      background-image: url("../../public/img/commondropfullblack.png");
+      
+    }
+    
+   
+    .text-light {
+      color: #fff;
+      font-family:Arial, sans-serif
+      
+      
+      
+    }
+  
+   
+  
+    h3 {
+      text-align: center;
+      color: white;
+      margin: 0px 0px 20px 00px;
+      
+     
+    }
+  
+    .page-container p {
+      color: white;
+      line-height: 25px; 
+      font-size: 10px;
+     
+      background-color: rgb(71, 68, 68);
+      
+    } 
+  
+    .page-container img {
+      margin: 2px;
+      width: 48px;
+      height: 46px;
+      margin-right: 7px;
+    }
+  
+    .ifNoImg {
+      margin: 2px;
+      width: 48px;
+      height: 46px;
+      margin-right: 7px;
+    }
+  
+    .page-container input {
+      margin: 10px;
+    }
+  
+    
+    
+    .rare {
+      align-items: center;
+      border: 2px solid rgb(124, 119, 114);
+      overflow-y: scroll;
+      height: 280px;
+     /*  width: 425px; */
+      margin: 10px;
+    }
+  
+    .rare::-webkit-scrollbar {
+      width: 16px;
+  }
+  
+    .rare::-webkit-scrollbar-track {
+      background-color: #e4e4e4;
+      border-radius: 100px;
+  }
+  
+    .rare::-webkit-scrollbar-thumb {
+      background-color: #cf9e58;
+      border-radius: 100px;
+  }
+  
+    .common {
+      align-items: center;
+      border: 2px solid rgb(124, 119, 114);
+      overflow-y: scroll;
+      height: 330px;
+      /* width: 425px; */
+      margin: 10px;
+    }
+  
+  
+    .common::-webkit-scrollbar {
+      width: 16px;
+  }
+  
+    .common::-webkit-scrollbar-track {
+      background-color: #e4e4e4;
+      border-radius: 100px;
+  }
+  
+    .common::-webkit-scrollbar-thumb {
+      background-color: #d4aa70;
+      border-radius: 100px;
+  }
+  
+    .boxListInfo h4 {
+      text-align: center;
+      font-size: 16px;
+      
+     }
+  
+    .boxListInfo {
+      margin: 10px auto;
+       height: fit-content;
+       display: flex;   
+       font-family: Verdana, Geneva, Tahoma, sans-serif; 
+   }
+      
+  
+    .inBoxListInfo {
+      border: 2px solid rgb(155, 98, 61);
+      background-color: aliceblue;
+      justify-content: center;
+      align-items: center;
+      font-size: 13px;
+      height: fit-content;
+      /* width: 400px; */
+     
+    }
+  
+    .backpackList {
+      margin: 10px auto;
+      border: 1px solid blue;
+      height: 1%;
+      display: flex;
+      flex-direction: column; /* Устанавливаем столбцовое направление для выравнивания h4 */
+      align-items: center; /* Выравнивание по центру по горизонтали */
+      background-color:rgb(206, 139, 39);
+      /* width: 450px; */
+   }
+  
+     .inbackpackList {
+      border: 2px solid rgb(155, 98, 61);
+      background-color: rgb(26, 35, 43);
+      height: 600px;
+      display: flex;
+      flex-wrap: wrap;
+      align-content: flex-start;
+    }
+  
+  
+    li {
+      list-style-type: none;
+      margin: 2px;
+      font-size: 11px;
+      
+    }
+  
+    .backpackList h4 {
+      text-align: center;
+      width: 50%;
+      height: 1%;
+     }
+  
+    
+  
+  .wrapperBackPack {
+    position: relative;
+    width: 50px; /* Фиксированная ширина элемента */  
+    height: 50px;
+   
+  }
+  
+    .wrapperBackPack img {
+      margin: auto;
+      position: relative;
+      width: 100%;
+      height: 95%;
+      display: inline-block;
+      border: 1px solid rgb(255, 255, 255);
+    }
+  
+    
+    
+    
+    .wrapperBackPack p {
+      color: rgb(255, 255, 255);
+      background-color: transparent;
+      font-size: 12px;
+      line-height: 0.5em;
+   
+    }
+  
+    .counter {
+      position: absolute;
+      bottom: 0;
+      right: 0;
+      font-weight: bold; 
+    }
+  
+   
+  
+    span {
+      text-align: center;
+      height: 1%;
+      color: rgb(253, 50, 50);
+      font-weight: bold;
+    }
+  
+  
+    .butRemove {
+      height: 40px;
+      width: 40px;
+      background-image: url("../../public/img/remove.png");
+      background-size: cover;
+      cursor: pointer;
+      opacity: 1;
+      transition: 0.5s ease-in-out;
+      
+      box-shadow: 0px 0px 0px rgb(194, 169, 169);
+      
+    }
+  
+    .butRemove:hover {
+      opacity: 0.9;
+      transition: 0.5s ease-in-out;
+      transform: translate(0, -5%) rotate(2deg);
+      box-shadow: 0px 0px 10px rgb(194, 169, 169);
+    }
+  
+    
+  
+    .buttons {
+      /* width: 400px; */
+      justify-content: center;
+      text-align: center;
+      align-items: center;
+      display: flex;
+     
+      
+    }
+  
+    .inpBut {
+      opacity: 1;
+      margin: 2px;
+    }
+  
+  
+    .inpBut:active {
+      opacity: 1;
+   
+    }
+  
+    .inpBut:hover {
+      opacity: 0.7;
+      -webkit-transform: scale(1.2);
+      -ms-transform: scale(1.2);
+      transform: scale(1.1);
+      cursor: pointer
+    }
+  
+    .inpArea {
+      margin: 5px;
+    }
+  }
+  
+  
+
+@media screen and (max-width: 700px) {
+         body {
+          zoom: 130%;
+         }
+  } 
+  
